# google-ai-project

./: .gitignore  Pipfile  README.md  app.py  crew.py
.streamlit/: secrets.toml
business_analyst/: README.md  pyproject.toml
business_analyst/src/business_analyst/: crew.py  main.py
business_analyst/src/business_analyst/config/: agents.yaml  tasks.yaml
tools/: analyst.py  clean_data.py  trainer.py
